primer ejeplo de home con gmaps.js integrado

--- a/src/main/webapp/WEB-INF/jspf/cabecera.jspf
+++ b/src/main/webapp/WEB-INF/jspf/cabecera.jspf
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>OnGo - planificador de rutas</title>
+    <title>OnGo</title>
 
     <!-- Core CSS - Include with every page -->
     <link href="${s}/css/bootstrap.min.css" rel="stylesheet">
@@ -236,7 +236,7 @@
                         <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        <li><a href="#"><i class="fa fa-user fa-fw"></i><sec:authentication property="principal.username" /></a>
                         </li>
                         <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
