--- a/src/main/webapp/WEB-INF/jspf/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jspf/navbar.jspf
@@ -16,16 +16,19 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i>OnGo</a>
+                            <a href="administrar"><i class="fa fa-dashboard fa-fw"></i>Control de rutas</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Planificar ruta<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
+                        		<li>
+                                    <a href="morris.html">Simple</a>
+                                </li>
                                 <li>
                                     <a href="flot.html">Múltiple</a>
                                 </li>
                                 <li>
-                                    <a href="morris.html">Individual</a>
+                                    <a href="morris.html">Evento público</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -37,65 +40,33 @@
                             <a href="forms.html"><i class="fa fa-edit fa-fw"></i>Mapa de rutas</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-wrench fa-fw"></i>Más visitados<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-wrench fa-fw"></i>Rutas<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="panels-wells.html">Más visitas</a>
+                                    <a href="panels-wells.html">Más frecuentes</a>
                                 </li>
                                 <li>
-                                    <a href="buttons.html">Por visitar</a>
-                                </li>
-                                <li>
-                                    <a href="notifications.html">Notifications</a>
-                                </li>
-                                <li>
-                                    <a href="typography.html">Typography</a>
-                                </li>
-                                <li>
-                                    <a href="grid.html">Grid</a>
+                                    <a href="buttons.html">Por hacer</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-files-o fa-fw"></i>Configuración<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#">Second Level Item</a>
+                                    <a href="/">Inicio</a>
                                 </li>
                                 <li>
-                                    <a href="#">Second Level Item</a>
+                                    <a href="login">Login</a>
                                 </li>
-                                <li>
-                                    <a href="#">Third Level <span class="fa arrow"></span></a>
-                                    <ul class="nav nav-third-level">
-                                        <li>
-                                            <a href="#">Third Level Item</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Third Level Item</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Third Level Item</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Third Level Item</a>
-                                        </li>
-                                    </ul>
-                                    <!-- /.nav-third-level -->
+                                 <li>
+                                    <a href="logout">Logout</a>
                                 </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="blank.html">Blank Page</a>
+                                  <li>
+                                    <a href="admin">Admin</a>
                                 </li>
-                                <li>
-                                    <a href="login.html">Login Page</a>
-                                </li>
+                                 
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
