Cambiando concepto de ruta y visita
- visita: sitio al que se quiere ir un dia a realizar una actividad

- ruta: conjunto de visitas que se van a hacer un dia debidamente ordenadas

--- a/src/main/webapp/WEB-INF/jspf/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jspf/navbar.jspf
@@ -74,11 +74,15 @@
                                     <a href="ruta">Ver ruta</a>
                                 </li>
                                 <li>
-                                    <a href="crear_ruta">Crear ruta</a>
-                                </li>
-                                <li>
                                     <a href="crear_evento">Crear evento</a>
                                 </li>
+                                <li>
+                                    <a href="crear_visita">Crear visita</a>
+                                </li>
+                                <li>
+                                    <a href="crear_ruta">Crear ruta</a>
+                                </li>
+                                
                                 <li>
                                     <a href="https://www.npmjs.com/package/latex">Latex npm</a>
                                 </li>
