--- a/src/main/webapp/WEB-INF/jspf/cabecera.jspf
+++ b/src/main/webapp/WEB-INF/jspf/cabecera.jspf
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>OnGo</title>
+    <title>OngO</title>
 
     <!-- Core CSS - Include with every page -->
     <link href="${s}/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +36,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">OnGo</a>
+                <a class="navbar-brand" href="index.html">OngO</a>
             </div>
             <!-- /.navbar-header -->
 
