--- a/src/main/webapp/WEB-INF/jspf/cabecera.jspf
+++ b/src/main/webapp/WEB-INF/jspf/cabecera.jspf
@@ -11,14 +11,36 @@
 
     <title>OngO</title>
 
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+ 
+ 
+ <!-- /#wrapper -->
+
+    <!-- Core Scripts - Include with every page -->
+    <script src="${s}/js/jquery.min.js"></script>
+    <script src="${s}/js/jquery-1.10.2.js"></script>
+    <script src="${s}/js/bootstrap.min.js"></script>
     <!-- Core CSS - Include with every page -->
     <link href="${s}/css/bootstrap.min.css" rel="stylesheet">
     <link href="${s}/font-awesome/css/font-awesome.css" rel="stylesheet">
+    
+    <script src="${s}/js/plugins/metisMenu/jquery.metisMenu.js"></script>
 
+    <!-- SB Admin Scripts - Include with every page -->
+    <script src="${s}/js/sb-admin.js"></script>
+
+    <!-- Page-Level Demo Scripts - Dashboard - Use for reference -->
+    <script src="${s}/js/demo/dashboard-demo.js"></script>
+    
+ 
+    <!-- Page-Level Plugin Scripts - Dashboard -->
+    <script src="${s}/js/plugins/morris/raphael-2.1.0.min.js"></script>
+    <script src="${s}/js/plugins/morris/morris.js"></script>
+    
     <!-- Page-Level Plugin CSS - Dashboard -->
     <link href="${s}/css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
     <link href="${s}/css/plugins/timeline/timeline.css" rel="stylesheet">
-
+	
     <!-- SB Admin CSS - Include with every page -->
     <link href="${s}/css/sb-admin.css" rel="stylesheet">
 
