--- a/bin/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/bin/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -33,6 +33,7 @@
             <li><a href="/hola">&#9762 &#9762 &#9762 &#9762</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/admin">Admin</a></li>
+            <li><a href="/upload">Upload</a></li>            
             <li><a href="/logout">Logout</a></li>
           </ul>
         </div><!--/.nav-collapse -->
