--- a/src/main/webapp/WEB-INF/jspf/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jspf/navbar.jspf
@@ -34,7 +34,7 @@
                             <a href="/administrar"><i class="fa fa-dashboard fa-fw"></i>Control de rutas</a>
                         </li>
                         <li>
-                            <a href="/visitas_user"><i class="fa fa-road fa-fw"></i>Mis vistas</a>
+                            <a href="/mis_visitas"><i class="fa fa-road fa-fw"></i>Mis vistas</a>
                         </li>
                         <li>
                             <a href="/eventos_asist"><i class="fa fa-map-marker fa-fw"></i>Asistencia a eventos</a>
