--- a/src/main/webapp/WEB-INF/jspf/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jspf/navbar.jspf
@@ -40,7 +40,7 @@
                             <a href="/mis_asistencias"><i class="fa fa-map-marker fa-fw"></i>Asistencia a eventos</a>
                         </li>
                         <li>
-                            <a href="/eventos_public"><i class="fa fa-map-marker fa-fw"></i>Eventos públicos</a>
+                            <a href="/eventos"><i class="fa fa-map-marker fa-fw"></i>Eventos públicos</a>
                         </li>
                         <li>
                             <a href="/mis_eventos"><i class="fa fa-map-marker fa-fw"></i>Eventos creados</a>
