--- a/src/main/webapp/WEB-INF/jspf/navbar.jspf
+++ b/src/main/webapp/WEB-INF/jspf/navbar.jspf
@@ -37,26 +37,24 @@
                             <a href="/mis_visitas"><i class="fa fa-road fa-fw"></i>Mis vistas</a>
                         </li>
                         <li>
-                            <a href="/mis_asistencias"><i class="fa fa-map-marker fa-fw"></i>Asistencia a eventos</a>
+                            <a href="/mis_rutas"><i class="fa fa-road fa-fw"></i>Mis rutas</a>
                         </li>
                         <li>
-                            <a href="/eventos"><i class="fa fa-map-marker fa-fw"></i>Eventos públicos</a>
-                        </li>
-                        <li>
-                            <a href="/mis_eventos"><i class="fa fa-map-marker fa-fw"></i>Eventos creados</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-clock-o fa-fw"></i>Mis rutas<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-clock-o fa-fw"></i>Eventos<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="/mis-rutas">Más frecuentes</a>
+                                    <a href="/mis-eventos">Creados</a>
                                 </li>
                                 <li>
-                                    <a href="buttons.html">Por hacer</a>
+                                    <a href="/eventos">Disponibles</a>
+                                </li>
+                                <li>
+                                    <a href="/asistencia">Asistirás</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
+                        
                         <li>
                             <a href="#"><i class="fa fa-files-o fa-fw"></i>Páginas<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
